# kairox

./: .gitignore  README.md  SETUP.md  package-lock.json  package.json  railway.toml  render.yaml  supabase_schema.sql
.github/workflows/: deploy-client.yml
anchor/: Anchor.toml  Cargo.toml
anchor/programs/kairox-escrow/: Cargo.toml
anchor/programs/kairox-escrow/src/: lib.rs
anchor/tests/: kairox-escrow.ts
client/: .env.example  index.html  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
client/src/: App.tsx  index.css  main.tsx
client/src/hooks/: useCountdown.ts  useDailyLogin.ts  useGameEngine.ts  usePriceFeed.ts  useRoundCountdown.ts  useSocialInit.ts  useWalletAuth.ts
client/src/pages/: AdminPage.tsx  GamePage.tsx  LandingPage.tsx  LeaderboardPage.tsx  NotFoundPage.tsx  ProfilePage.tsx
client/src/store/: gameStore.ts  socialStore.ts  uiStore.ts  userStore.ts  walletStore.ts
client/src/utils/: api.ts  fingerprint.ts  helpers.ts  hmacClient.ts  priceFeed.ts  sanitize.ts  socketService.ts  solana.ts  supabase.ts
server/: .env.example  .env.txt  Dockerfile  Dockerfile.txt  package.json  tsconfig.json
server/src/: index.ts
server/src/config/: supabase.ts
server/src/middleware/: error.ts  rateLimiter.ts  security.ts
server/src/routes/: admin.ts  leaderboard.ts  nonce.ts  predictions.ts  price.ts  rounds.ts  users.ts  wallet.ts
server/src/security/: botDetector.ts  hmac.ts  nonceStore.ts  securityLogger.ts  txVerifier.ts
server/src/services/: feedService.ts  leaderboardService.ts  notificationService.ts  priceFeedService.ts  (+5 more)
(+40 files in other folders)
