[package]
name = "kairox-escrow"
version = "0.1.0"
description = "KAIROX prediction game escrow program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "kairox_escrow"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.30.1"
